--- a/index.html
+++ b/index.html
@@ -1,20 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- ~~~~css link~~~~ -->
-   <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ~~~~tailwind link~~~~ -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-   <!-- ~~~~google fonts~~~~ -->
+    <!-- ~~~~font awesome link~~~~ -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-   <!-- ~~~~tailwind link~~~~ -->
+    <!-- ~~~~css link~~~~ -->
+    <link rel="stylesheet" href="./style.css">
 
-   
-  <title>TechWave</title>
-</head>
-<body>
-  
-</body>
+    <!-- ~~~~google fonts~~~~ -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet">
+
+    <title>TechWave</title>
+  </head>
+
+  <body class="">
+    <header class="w-full bg-[#1A0B2E]">
+      <nav class=" border-b border-gray-50">
+        <div class=" nav-container items-center text-white justify-between max-w-6xl m-auto p-7 flex ">
+          <h2 class="text-3xl font-bold">Tech<span
+              class="text-3xl font-black uppercase tracking-tighter bg-[linear-gradient(30deg,#F7E93F_0%,#FB09B4_51%,#9100F8_100%)] bg-clip-text text-transparent ">Wave</span>
+          </h2>
+          <ul class="flex gap-8 ">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Episodes</a></li>
+            <li><a href="#">Host</a></li>
+          </ul>
+          <div>
+            <button class="flex cursor-pointer items-center gap-3 px-4 py-3 font-semibold text-white rounded-full 
+               bg-[linear-gradient(30deg,#F7E93F_0%,#FB09B4_51%,#9100F8_100%)] 
+               hover:scale-105 transition-transform duration-400 shadow-lg">Subscribe<i
+                class="fa-solid fa-arrow-right"></i></button>
+
+          </div>
+        </div>
+
+      </nav>
+
+      <!-- ~~~~~~~~~hero-section~~~~~~~~ -->
+      <div class="hero">
+        <div  class="hero-container">
+       
+            <img src="./images/hero-bg.png" alt="" class="hero-img">
+            <div class="hero-content text-center items-center  w-[550px] m-auto mb-9">
+              <h1 class="font-bold text-[5vw] text-white mb-2">TechWave</h1>
+              <p class="text-gray-400 text-[1vw]">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+              <div class=" text-white align-baseline mt-6 ">
+                <button class=" cursor-pointer items-center gap-3 px-4 py-3 font-semibold text-white rounded-full text-[1.2vw]
+               bg-[linear-gradient(30deg,#F7E93F_0%,#FB09B4_51%,#9100F8_100%)] 
+               hover:scale-105 transition-transform duration-400 shadow-lg"><i class="fa-brands fa-spotify"></i>Listen on Spotify</button>
+                <button class="border-2 text-[#00FF88] items-center items-center gap-3 px-4 py-3 font-semibold rounded-full ml-5 text-[1.2vw] hover:scale-105 transition-transform duration-400 shadow-lg"><i class="fa-regular fa-envelope"></i> Subscribe</button>
+              </div>
+            </div>
+          
+          <div class="img-box">
+            <img src="./images/hero-circle.png" alt="circle-img" class="middle-img">
+            <span class="badge">NEW</span>
+            <img src="./images/microphone.png" alt="" class="top-img">
+          </div>
+
+
+
+
+        </div>
+      </div>
+
+    </header>
+
+  </body>
+
 </html>
